--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background: rgb(2,0,36);
+  background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(29,29,172,0.4920168751094187) 35%, rgba(0,212,255,1) 100%);
 }
 
 .App-logo {
@@ -14,14 +16,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
